# claude-code-config

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  embed-corpus  embed-status  lint-ways  settings.json  todo-ADR-110-iteration-2.md  todo-ADR-111-phase2.md  ways-stats  ways.json
.claude/: .gitignore  (+5 more)
tools/ways-cli/: .gitignore  Cargo.toml  build.rs  download-ways.sh  languages.json
tools/ways-cli/src/: bm25.rs  frontmatter.rs  main.rs  scanner.rs  session.rs  table.rs  util.rs
tools/ways-cli/src/agents/: claude_code.rs  mod.rs  system.rs
tools/ways-cli/src/cmd/: banner.rs  context.rs  corpus.rs  embed.rs  governance.rs  graph.rs  init.rs  language.rs  lint.rs  list.rs  match_bm25.rs  mod.rs  provenance.rs  render.rs  reset.rs  show.rs  siblings.rs  stats.rs  status.rs  suggest.rs  template.rs  tree.rs  tune.rs
tools/ways-cli/src/cmd/governance/: audit.rs  helpers.rs  lint.rs  matrix.rs  mod.rs  query.rs  report.rs  trace.rs
tools/ways-cli/src/cmd/scan/: candidates.rs  mod.rs  scoring.rs
tools/ways-cli/src/cmd/show/: helpers.rs  metrics.rs  mod.rs
tools/ways-cli/tests/: SIMULATION-SPEC.md  session_sim.rs
tools/ways-cli/tests/fixtures/ways/testdomain/cmd-trigger/: cmd-trigger.md
tools/ways-cli/tests/fixtures/ways/testdomain/file-trigger/: file-trigger.md
tools/ways-cli/tests/fixtures/ways/testdomain/gated-way/: gated-way.md
tools/ways-cli/tests/fixtures/ways/testdomain/parent/: parent.md
tools/ways-cli/tests/fixtures/ways/testdomain/scoped-way/: scoped-way.md
tools/ways-cli/tests/fixtures/ways/testdomain/state-trigger/: state-trigger.md
(+485 files in other folders)
